--- a/templates/pages/home.gohtml
+++ b/templates/pages/home.gohtml
@@ -1,28 +1,16 @@
+{{define "home"}}
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://unpkg.com/mvp.css">
-    <title>로이 코인</title>
-</head>
+{{template "head" .PageTitle}}
 <body>
-    <header>
-        <h1>{{.PageTitle}}</h1>
-    </header>
+    {{template "header" .PageTitle}}
+
     <main>
-    <section>
     {{range .Blocks}}
-        <div>
-            <ul>
-                <li>{{.Data}}</li>
-                <li>{{.Hash}}</li>
-                <li>{{.PrevHash}}</li>
-            </ul>
-        </div>
+        {{template "block" .}} <!-- .을 넘겨 주는 순간 Block으로 처리 -->
     {{end}}
-    </section>
     </main>
+    {{template "footer"}}
 </body>
 </html>
+{{end}}
